@@ -22,13 +22,26 @@ PKG_FILES = FileList[
   'spec/**/*.rb', 
   'examples/**/*'
 ]
+FileUtils.touch(File.dirname(__FILE__) + '/failures.txt')
 
 task :default => [:verify_rcov]
 
 desc "Run all specs"
 Spec::Rake::SpecTask.new do |t|
   t.spec_files = FileList['spec/**/*_spec.rb', '../RSpec.tmbundle/Support/spec/*_spec.rb']
-  t.spec_opts = ['--color','--backtrace']
+  t.spec_opts = [
+    '--colour', 
+    '--backtrace', 
+    '--failures', 
+    'failures.txt', 
+    '--example', 
+    'failures.txt', 
+    '--loadby', 
+    'mtime', 
+    '--reverse',
+    '--timeout',
+    '1'
+  ]
   t.rcov = true
   t.rcov_dir = '../doc/output/coverage'
   t.rcov_opts = ['--exclude', 'spec\/spec,bin\/spec,examples']
